<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".RegistrationActivity"
    android:orientation="vertical">

    <TextView
        android:id="@+id/tvRegistration"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="50dp"
        android:text="@string/registration_form"
        android:textSize="24sp"
        android:textStyle="bold"
        tools:layout_editor_absoluteX="124dp"
        tools:layout_editor_absoluteY="33dp" />

    <EditText
        android:id="@+id/etUName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="50dp"
        android:autofillHints=""
        android:ems="10"
        android:hint="@string/username"
        android:inputType="textPersonName"
        android:textColorHint="#78909C"
        android:textSize="20sp"
        tools:layout_editor_absoluteX="100dp"
        tools:layout_editor_absoluteY="138dp" />

    <EditText
        android:id="@+id/etEmail"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="10dp"
        android:ems="10"
        android:hint="@string/email"
        android:inputType="textEmailAddress"
        android:textColorHint="#78909C"
        android:textSize="20sp"
        tools:layout_editor_absoluteX="83dp"
        tools:layout_editor_absoluteY="225dp"
        android:autofillHints="" />

    <EditText
        android:id="@+id/etPhone"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="10dp"
        android:autofillHints=""
        android:ems="10"
        android:hint="@string/phone"
        android:inputType="phone"
        android:textColorHint="#78909C"
        android:textSize="20sp"
        tools:layout_editor_absoluteX="67dp"
        tools:layout_editor_absoluteY="303dp" />

    <EditText
        android:id="@+id/etPassword"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="10dp"
        android:autofillHints=""
        android:ems="10"
        android:hint="@string/password"
        android:inputType="textPassword"
        android:textColorHint="#78909C"
        android:textSize="20sp"
        tools:layout_editor_absoluteX="91dp"
        tools:layout_editor_absoluteY="526dp" />

    <TextView
        android:id="@+id/tvGender"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="20dp"
        android:text="@string/gender"
        android:textColor="#43A047"
        android:textSize="20sp"
        android:textStyle="bold"
        tools:layout_editor_absoluteX="38dp"
        tools:layout_editor_absoluteY="386dp" />

    <RadioGroup
        android:id="@+id/rgGender"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="10dp"
        android:orientation="horizontal"
        android:checkedButton="@id/rbMale">

        <RadioButton
            android:id="@+id/rbMale"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/male"
            android:textSize="20sp"
            tools:layout_editor_absoluteX="109dp"
            tools:layout_editor_absoluteY="377dp" />

        <RadioButton
            android:id="@+id/rbFemale"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/female"
            android:textSize="20sp"
            tools:layout_editor_absoluteX="205dp"
            tools:layout_editor_absoluteY="377dp" />

        <RadioButton
            android:id="@+id/rbOther"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/other"
            android:textSize="20sp"
            tools:layout_editor_absoluteX="319dp"
            tools:layout_editor_absoluteY="377dp" />

    </RadioGroup>

    <TextView
        android:id="@+id/tvHobbies"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="20dp"
        android:text="@string/hobbies"
        android:textColor="#43A047"
        android:textSize="20sp"
        android:textStyle="bold"
        tools:layout_editor_absoluteX="145dp"
        tools:layout_editor_absoluteY="463dp" />

    <EditText
        android:id="@+id/etHobbies"
        android:layout_width="300dp"
        android:layout_height="100dp"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="10dp"
        android:autofillHints=""
        android:ems="10"
        android:gravity="start|top"
        android:hint="@string/write_at_least_four_hobbies"
        android:inputType="textMultiLine"
        android:textColorHint="#78909C"
        android:textSize="20sp"
        tools:layout_editor_absoluteX="89dp"
        tools:layout_editor_absoluteY="484dp" />

    <Button
        android:id="@+id/button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="50dp"
        android:text="@string/register"
        android:textSize="20sp"
        tools:layout_editor_absoluteX="155dp"
        tools:layout_editor_absoluteY="624dp" />

</LinearLayout>
